# Submarine

./: .bazelrc  .ccls  .gitignore  .gitmodules  LICENSE  README.md  WORKSPACE.bazel  getdeps.sh
app/: BUILD.bazel
doc/: DesignDoc.md  UserAndRoom.md
test/: BUILD.bazel  test_hello.cc
